# virtual-keyboard

./: .clang-format  .gitignore  CMakeLists.txt  FyneApp.toml  LICENSE.md  README.md  characters.py  flex_layout.go  go.mod  keyboard.c  keyboard.py  keyboard.spec  keybutton.py  main.go  pyproject.toml  requirements.txt  style.css  test_characters.py  tests.py  virtual-keyboard.desktop
.github/workflows/: pr.yaml  release.yaml  tests.yaml
data/: style.css
