[tool.poetry]
name = "virtual-keyboard"
version = "0.0.1"
description = "on-screen keyboard to help typing faster internationally"
authors = ["F. Talha Altinel <talhaaltinel@hotmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
PyGObject = "^3.46.0"

[tool.ruff]
line-length = 180

[tool.ruff.lint]
ignore = ["E402"]


[tool.poetry.group.dev.dependencies]
pygobject-stubs = "^2.10.0"
pytest = "^8.2.0"
coverage = "^7.5.3"
ruff = "^0.4.8"
pyinstaller = "^6.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
