[project]
name = "virtual-keyboard"
version = "0.0.5"
description = "on-screen keyboard to help typing faster internationally"
authors = ["F. Talha Altinel <talhaaltinel@hotmail.com>"]
license = "MIT"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pygobject>=3.50.0",
]

[dependency-groups]
dev = [
    "coverage>=7.6.9",
    "pygobject-stubs>=2.12.0",
    "pyinstaller>=6.11.1",
    "pytest>=8.3.4",
    "ruff>=0.8.4",
]

[tool.ruff]
line-length = 180

[tool.ruff.lint]
ignore = ["E402"]
